# AVFX

./: README.md
build_study/prebuild_shared_standalone/: build_source_for_arm.sh
build_study/testjni/: local.properties
ffmpeg/: .do-compile-ffmpeg.sh.swp  do-compile-ffmpeg.sh
ffmpeg/config/: module-lite-hevc.sh  module-my.sh  module.sh
jansson-2.7/: .cproject  .project  aclocal.m4
jansson-2.7/autom4te.cache/: requests
jansson-2.7/src/: Makefile.am  Makefile.in
mlt-android/: gen_data_android.sh
mlt-android/jni/: .cproject  .project  Application.mk
mlt-jni/: Makefile
mlt-jni/jni/: Android.mk  Application.mk
mlt-standalone/: build_source_for_arm.sh  build_toolchain.sh  module.sh
mlt-standalone/source/: .cproject  .project  configure  mlt++.pc  mlt-framework.pc
prebuild_shared_ndkbuild/jni/: Android.mk  my.c
prebuild_shared_standalone/: build_toolchain.sh
prebuild_shared_standalone/source/: Makefile.in  configure.ac  my.c
simple_demo/ijkplayer-sample/: AndroidManifest.xml
simple_demo/mlt-android/: .project
studio/vedit_demo/: settings.gradle
testjni/: AndroidManifest.xml  build.xml
vedit_script/: .cproject  .project  Makefile.am  Makefile.in  VEditCallable.cpp  VEditCallable.h  VEditCommon.cpp  VEditCommon.h  VEditCompilable.h  VEditEnumExpandable.cpp  VEditEnumExpandable.h  VEditError.h  VEditException.cpp  VEditException.h  VEditExport.h  VEditFilterScript.cpp  VEditFilterScript.h  VEditMacroExpandable.cpp  VEditMacroExpandable.h  VEditMltRun.cpp  VEditMltRun.h  VEditMultiTrackScript.cpp  VEditMultiTrackScript.h  VEditPlaylistScript.cpp  VEditPlaylistScript.h  VEditProducerScript.cpp  VEditProducerScript.h  VEditScript.cpp  VEditScript.h  VEditScriptEnums.cpp  VEditScriptEnums.h  VEditScriptMacros.cpp  VEditScriptMacros.h  VEditScriptParams.cpp  VEditScriptParams.h  VEditScriptProps.cpp  VEditScriptProps.h  VEditTransitionScript.cpp  VEditTransitionScript.h  VEditUtil.cpp  (+9 more)
vedit_script/android/: .project
vedit_script/android/jni/: Android.mk  Application.mk
vedit_script/android/jni/vedit_script/: Android.mk  VEditAndroid.cpp  VEditMltRuntime_android.cpp  VEditVM_android.cpp
vedit_script/android/src/com/youku/cloud/vedit/: MltRuntime.java  MltTemplate.java  package-info.java
vedit_script/autom4te.cache/: output.1  requests  traces.0  traces.1
vedit_script/script_template/: playlist.json  video_speed.json  video_template.json  video_with_filter.json
vedit_script/src/: Makefile.am  Makefile.in  VEditCallable.cpp  VEditCallable.h  VEditCommon.cpp  VEditCommon.h  VEditCommonDefine.h  VEditDefinable.cpp  VEditEnumExpandable.cpp  VEditEnumExpandable.h  VEditError.cpp  VEditError.h  VEditException.cpp  VEditException.h  VEditFilterScript.cpp  VEditFilterScript.h  VEditMacroExpandable.cpp  VEditMacroExpandable.h  VEditMltRun.cpp  VEditMltRun.h  VEditMultiTrackScript.cpp  VEditMultiTrackScript.h  VEditPlaylistScript.cpp  VEditPlaylistScript.h  VEditProducerScript.cpp  VEditProducerScript.h  VEditScript.cpp  VEditScript.h  VEditScriptEnums.cpp  VEditScriptMacros.cpp  VEditScriptMacros.h  VEditScriptParams.cpp  VEditScriptParams.h  VEditScriptProps.cpp  VEditScriptProps.h  VEditTransitionScript.cpp  VEditTransitionScript.h  VEditUtil.cpp  VEditUtil.h  VEditVM.cpp  (+2 more)
vedit_script/test/: Makefile.am  Makefile.in  core.45096  run.json  run1.json  test_run_serialized.cpp  test_video_script.cpp
vedit_script/test/testdir/: brightness_filter.json  color_blank.json  color_producer.json  grayscale_filter.json  langyabang_all.json  multitrack_simple.json  playlist_simple.json  playlist_with_filter.json  playlist_with_mixes.json  simple_mult2.json  test.json  trans_audio_mix.json  trans_composite.json  video_speed.json  video_template.json  video_with_enum.json  video_with_filter.json  video_with_macro.json
vedit_script_android/: build_ffmpeg.sh  build_mlt.sh  build_source_for_android.sh  build_x264.sh  ffmpeg  jansson  module.sh  source  vedit_script  x264  x264_config_opts.sh
x264/: x264_config_opts.sh
(+179 files in other folders)
